fix z-index for 3 sliders on homepage

--- a/style.css
+++ b/style.css
@@ -143,6 +143,10 @@ div.doorway-container article.myportfolio-container.minimal-light {
     z-index: 6 !important;
 }
 
+div.doorway-container article.myportfolio-container.technotan {
+    z-index: 7 !important;
+}
+
 /* custom homepage widgets */
 
 /* custom widget styles */
